이미지 크기 변경

--- a/kmooc_notice.html
+++ b/kmooc_notice.html
@@ -12,10 +12,12 @@
 			}
 			#bgpane2 {
 				background:url('http://wwwdev.kmooc.kr/asset-v1:SNUk+SNU046.101k+2015+type@asset+block@%ED%80%B4%EC%A6%88%EC%95%880.png') no-repeat 0 0;
+				background-size: 500px 320px;
 				color:#FFF;
 			}
 			#bgpane3 {
 				background:url('http://wwwdev.kmoocs.kr/asset-v1:SNUk+SNU046.101k+2015+type@asset+block@%ED%80%B4%EC%A6%88%EC%95%88%EB%82%B41.png') no-repeat 0 0;
+				background-size: 500px 320px;
 				color:#FFF;
 			}
 			#bgpane4 {
@@ -23,18 +25,22 @@
 			}
 			#bgpane5 {
 				background:url('http://wwwdev.kmooc.kr/asset-v1:SNUk+SNU046.101k+2015+type@asset+block@%ED%83%90%EA%B5%AC1.png') no-repeat 0 0;
+				background-size: 500px 320px;
 				color:#FFF;
 			}
 			#bgpane6 {
 				background:url('http://wwwdev.kmooc.kr/asset-v1:SNUk+SNU046.101k+2015+type@asset+block@%ED%83%90%EA%B5%AC2.png') no-repeat 0 0;
+				background-size: 500px 320px;
 				color:#FFF;
 			}
 			#bgpane7 {
 				background:url('http://wwwdev.kmooc.kr/asset-v1:SNUk+SNU046.101k+2015+type@asset+block@%ED%83%90%EA%B5%AC3.png') no-repeat 0 0;
+				background-size: 500px 320px;
 				color:#FFF;
 			}
 			#bgpane8 {
 				background:url('http://wwwdev.kmooc.kr/asset-v1:SNUk+SNU046.101k+2015+type@asset+block@%ED%83%90%EA%B5%AC4.png') no-repeat 0 0;
+				background-size: 500px 320px;
 				color:#FFF;
 			}
 		
